added scrip tag 1

--- a/typeof.html
+++ b/typeof.html
@@ -8,20 +8,15 @@
 <body>
    
   <script>
-let m="Monika Belekar";
+let age = 21;
+console.log(age);
+
+const m = "monika";
 console.log(m);
-console.log(typeof(m));
 
-
-var weight = 45;
+var weight = "45";
+var waight = "40";
 console.log(weight);
-console.log(typeof(weight));
-
-
-const email = "monikabelekar2@gmail.com";
-console.log(email);
-console.log(typeof(email));
-
 
  </script>
 </body>
